syntax = "proto3";

option go_package = "api/protobuf-spec";

service ShareService {
  rpc AddShare(AddShareReq) returns (AddShareResp) {}
  rpc GetShareByPage(GetShareByPageReq) returns (GetShareByPageResp) {}
}

message AddShareReq {
  PostItem post_content = 1;
}

message AddShareResp {
  string message = 1;
}

message GetShareByPageReq {
  string last_id = 1;
  int64 page_size = 2;
}

message GetShareByPageResp {
  int64 total = 1;
  string last_id = 2;
  repeated PostItem data = 3;
}

message PostItem {
  string text = 1;
  repeated string img = 2;
  string created_at = 3;
  string updated_at = 4;
}